2007-04-19    <tino@firebird.03.softkill.net>

	* ptybuffer.c (file_out): removed deprecated cast of lvalue (there
	are things which are hard to explain if you don't know what this
	is).

2007-04-07    <tino@firebird.03.softkill.net>

	* script/autostart.sh: Typo corrected (startd -> started)
	* script/autostart.sh (PATH): added in case it's used from cron

2007-03-31    <tino@firebird.03.softkill.net>

	* script/autostart.sh (for): Forgot to change echo into log

2007-03-26    <tino@firebird.03.softkill.net>

	* script/autostart.sh (log): added better logging
	(RUNDIR): in Shell && does not bind tighter than ||, fixed

	* ptybuffer.c (main, file_timestamp): pid reset to show correct
	PID after forks
	(file_timestamp): output corrrected to what it ought to be
	(main): logfile paths are now logged (in case realpath fails)

2007-02-26    <tino@firebird.03.softkill.net>

	* ptybuffer.c (file_open, file_flush_close, file_timestamp): added
	(file_out): timestamping added

2006-12-02    <tino@firebird.03.softkill.net>

	* ptybuffer.c (master_process, log_childstatus): logging made more
	clear

2006-11-11    <tino@firebird.03.softkill.net>

	* ptybuffer.c (main): realpath added to logfile and outfile.

2006-08-11    <tino@firebird.03.softkill.net>

	* ptybuffer.c: dirty.h removed, so changed all occurences of
	"dirty" names to the full name.
	(main): renamed HISTORY_LENGTH to PTYBUFFER_HISTORY_LENGTH
	(main): typo corrected which always gave "missing command" if
	option -c was not present.
	(daemonloop): now return void

2006-07-26    <tino@firebird.03.softkill.net>

	* ptybuffer.c (ptybuffer_new_fd, main): history_tail added (option -t)
	(main): options check (-c) and force (-f) added

2006-04-12    <tino@firebird.03.softkill.net>

	* ptybuffer.c (daemonloop): A little typo (wrong cb function) make
	ptybuffer segfault.  This shows that the abstraction level of
	tino/sock.h is not high enough yet.

2006-01-30    <tino@firebird.03.softkill.net>
