@@ -1,3 +1,11 @@
+2007-04-29    <tino@firebird.03.softkill.net>
+
+	* ptybuffer.c (parent): SIGPIPE blocking moved here (I do not
+	remember why I needed this, perhaps it was just to be sure).
+	(main): When postforking (default on CygWin) a returning child did
+	not break the accept() immediately.  Now the process reacts on
+	SIGCHLD.
+
 2007-04-19    <tino@firebird.03.softkill.net>
 
 	* ptybuffer.c (file_out): removed deprecated cast of lvalue (there
